# DEEPLEarning

./: README.md
rppg-mmtcan/: Dockerfile  docker-compose.yaml  pyproject.toml
rppg-mmtcan/src/: main.py  psmain.py
rppg-mmtcan/src/models/: MMT_CAN.py  deepphsy_model_evaluation.py  deepphsy_trainer.py  deepphys_model.py  evaldebug.py  model_evaluation.py  psnet_model_evaluation.py  ts_can_model.py  ts_can_model_evaluation.py
rppg-mmtcan/src/notebooks/: India_GT.csv  Sierra_Leone_GT.csv  model_evaluation_graphs.ipynb
rppg-mmtcan/src/static/: frontend.html  index.html
rppg-mmtcan/src/training/: PhysnetTrainer.py  generate_configs.py  train.py
rppg-mmtcan/src/training/configs/: deep_phys_BPD4.yaml  deep_phys_PURE.yaml  deep_phys_SNR.yaml  deep_phys_UBFC.yaml  mtts_can_BPD4.yaml  mtts_can_PURE.yaml  mtts_can_SNR.yaml  mtts_can_UBFC.yaml  physnet_BPD4.yaml  physnet_PURE.yaml  physnet_SNR.yaml  physnet_UBFC.yaml  tscan_BPD4.yaml  tscan_PURE.yaml  tscan_SNR.yaml  tscan_UBFC.yaml
rppg-mmtcan/src/utils/: remote_data_loader.py
